# RayTracer

./: .gitignore  CMakeLists.txt  Doxyfile  build.sh  flake.nix  sfml-3.0.1.nix
.github/workflows/: check-binary.yml  push-mirror.yml  raytracer-ci.yml
Parsers/: AParser.cpp  AParser.hpp  IParser.hpp  basicObject.hpp
Parsers/CfgParser/: CMakeLists.txt
Parsers/CfgParser/src/: cfgParser.cpp  cfgParser.hpp
Primitives/: AObject.hpp  IObject.hpp  Material.hpp  Utils.hpp
Primitives/BasicObject/: basicObject.hpp
Primitives/Camera/: CMakeLists.txt
Primitives/Camera/src/: Camera.hpp  base.cpp
Primitives/Cone/: CMakeLists.txt
Primitives/Cone/src/: base.cpp  compute.cpp  cone.hpp
Primitives/Cylinder/: CMakeLists.txt
Primitives/Cylinder/src/: Cylinder.hpp  base.cpp  compute.cpp  cylinder.hpp
Primitives/Lights/: CMakeLists.txt
Primitives/Lights/src/: Lights.hpp  base.cpp
Primitives/Plane/: CMakeLists.txt
Primitives/Plane/src/: base.cpp  compute.cpp  plane.hpp
Primitives/Sphere/: CMakeLists.txt
Primitives/Sphere/src/: Sphere.hpp  base.cpp  compute.cpp
Raytracer/: CMakeLists.txt
Raytracer/src/: app.cpp  app.hpp  main.cpp  my_macros.hpp  raytracer.cpp  raytracer.hpp
Raytracer/src/DlLib/: DlLib.cpp  DlLib.hpp
Raytracer/src/Modules/Camera/src/: Camera.hpp  base.cpp
Raytracer/src/Modules/Lights/src/: Lights.hpp  base.cpp
Raytracer/src/Modules/Ray/: Ray.hpp
Raytracer/src/Raycast/: Base.cpp  Raycast.hpp
Raytracer/src/Raytracer/: Base.cpp  Raytracer.hpp
Raytracer/src/Scene/: Base.cpp  Compute.cpp  Render.cpp  Scene.hpp
Renderers/: IRenderer.hpp
Renderers/PpmRenderer/: CMakeLists.txt
Renderers/PpmRenderer/src/: PpmRenderer.hpp  base.cpp  draw.cpp  render.cpp
Renderers/SfmlRenderer/: CMakeLists.txt
Renderers/SfmlRenderer/src/: SfmlRenderer.cpp  SfmlRenderer.hpp  base.cpp  draw.cpp  render.cpp
Utils/: Vector.hpp
tests/: testCone1.cfg  testCylinder1.cfg  testMultiples.cfg  testSphere1.cfg  testSphere2.cfg  testSubject  testSubject.cfg
